# femtophotos

./: Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: rust.yml
src/: image_loading.rs  image_saving.rs  main.rs  rotation.rs  state.rs
test_images/: 0.qoi
