[package]
name = "femtophotos"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.32.1"
image = "0.24.6"
spng = "0.1.0"
turbojpeg = {version = "0.5.2", features = ["image"]}
qoi = "0.4.1"
png = "0.17.8"
kamadak-exif = "0.5.5"
rfd = "0.11.3"
rayon = "1.7.0"
simple-logging = "2.0.2"
log = "0.4.17"

[build-dependencies]
winres = "0.1"

[dev-dependencies]
rusty-hook = "0.11.2"
